--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -86,11 +86,11 @@
             </div>
             <a :href="'./account.html?id='+account.id" class="btn text-center mt-2 text-light"
               id="btn-transaction">Transaction History</a>
-              <button class="btn btn-danger mt-2">Delete Account</button>
+           
           </div>
         </template>
         <template v-if="accounts.length < 3">
-          <button class="createAccount" @click="alert">
+          <button class="createAccount" @click="createAccount">
             Create new account
           </button>
         </template>
@@ -158,6 +158,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="../scripts/accounts.js"></script>
