--- a/src/main/resources/static/web/assets/pages/create-card.html
+++ b/src/main/resources/static/web/assets/pages/create-card.html
@@ -32,10 +32,10 @@
               <a class="nav-link active fw-bold" href="./cards.html">CARDS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">LOANS</a>
+              <a class="nav-link" href="./loans-application.html">LOANS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TRANSACTION</a>
+              <a class="nav-link" href="./transfers.html">TRANSACTION</a>
             </li>
             <li class="nav-item">
               <button class="button">
@@ -56,22 +56,21 @@
       <h1 class="text-light text-center">Welcome to your account</h1>
     </header>
 
-    <main class="container my-5 rounded-5 p-3 align-items-center d-flex flex-column text-light" id="main-cards">
+    <main class="container my-5 rounded-5 p-2 align-items-center justify-content-center d-flex flex-column text-light" id="main-cards">
       <h2 class="text-center">Please fill the next form</h2>
       
       <form @submit.prevent="alert">
         <div class="form-floating">
 
           <select class="form-select" id="floatingSelect" aria-label="Floating label select example" v-model="color">
-            <option selected>Open this select menu</option>
             <option value="GOLD">GOLD</option>
             <option value="TITANIUM">TITANIUM</option>
             <option value="SILVER">SILVER</option>
           </select>
-          <label for="floatingSelect">Works with selects</label>
+          <label for="floatingSelect">Choose your favorite</label>
         </div>
 
-        <div class="mt-5">
+        <div class="mt-3">
           <h3 class="text-center">Select the type card</h3>
           <div class="form-check">
             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="DEBIT"
