--- a/src/main/resources/static/web/assets/pages/transfers.html
+++ b/src/main/resources/static/web/assets/pages/transfers.html
@@ -127,6 +127,8 @@
               </div>
             </fieldset>
           </form>
+
+          
           <!--External form-->
           <form class="form-horizontal" v-if="form2">
             <fieldset>
@@ -135,7 +137,7 @@
 
               <!-- Text input-->
               <div class="form-group">
-                <label class=" control-label" for="textinput">Number Account</label>
+                <label class=" control-label" for="textinput">From</label>
                 <div class="">
                   <input id="textinput" name="textinput" type="text" placeholder="Number" class="form-control input-md"
                     required="" v-model="destinationAccount" />
@@ -184,6 +186,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="../scripts/transfers.js"></script>
