--- a/src/main/resources/static/web/admiPages/manager.html
+++ b/src/main/resources/static/web/admiPages/manager.html
@@ -7,12 +7,11 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="stylesheet" href="../style/style.css" />
   <link rel="shortcut icon" href="../images/Mindhub Brothers-logos.jpeg" type="image/x-icon" />
-  <link rel="shortcut icon" href="./multimedia/Mindhub Brothers-logos.jpeg" type="image/x-icon" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&family=Roboto+Slab&display=swap"
     rel="stylesheet" />
-  <title>Mindhub Brothers</title>
+  <title>Mindhub Brothers | Manager</title>
 </head>
 
 <body>
@@ -38,7 +37,7 @@
 
     </header>
 
-    <main>
+    
       <div class="container mt-5 text-light">
         <form>
           <h2>Client Manager</h2>
@@ -66,6 +65,14 @@
             Add Client
           </button>
         </form>
+
+
+        <section class="container mt-3 d-flex align-items-center gap-5 justify-content-center">
+          <h2 class="text-dark">Create a new loan: </h2>
+            <a href="./loansByManager.html" class="text-light btn btn-warning">Add a new Loan</a>
+        </section>
+
+        <main>
 
         <div class="mt-5">
           <table class="table table-bordered table-striped border border-primary">
