--- a/src/main/resources/static/web/admiPages/loansByManager.html
+++ b/src/main/resources/static/web/admiPages/loansByManager.html
@@ -17,94 +17,102 @@
 
 <body>
 
-    <header class="d-flex align-items-center text-center justify-content-around flex-wrap p-2">
-        <img src="../images/Mindhub Brothers-logos.jpeg" alt="logo" title="Mindhub Brothers Bank"
-            class="logo rounded-5 d-md-none d-lg-block" />
-        <section class="text-light rounded-4 p-2 mx-2" id="section-header">
-            <h1>WELCOME MANAGER</h1>
-            <h3>
-                Below you can create new loans
-            </h3>
-        </section>
+    <div id="app">
 
-        <div class="d-flex flex-lg-column align-items-center gap-3">
-            <button class="animated-button" @click.prevent="logOut">
-                <span>Log out</span>
-            </button>
+        <header class="d-flex align-items-center text-center justify-content-around flex-wrap p-2">
+            <img src="../images/Mindhub Brothers-logos.jpeg" alt="logo" title="Mindhub Brothers Bank"
+                class="logo rounded-5 d-md-none d-lg-block" />
+            <section class="text-light rounded-4 p-2 mx-2" id="section-header">
+                <h1>WELCOME MANAGER</h1>
+                <h3>
+                    Below you can create new loans
+                </h3>
+            </section>
 
-            <button type="button" class="rounded-4 px-3" id="bg-dark">DARK MODE</button>
+            <div class="d-flex flex-lg-column align-items-center gap-3">
+                <button class="animated-button" @click.prevent="logOut" type="submit">
+                    <span >Log out</span>
+                </button>
 
-    </header>
+                <button type="button" class="rounded-4 px-3" id="bg-dark">DARK MODE</button>
 
-    <main>
-        <form class="align-items-center justify-content-center d-flex-flex-column">
-            <div class="mb-3">
-                <label for="nameLoan" class="form-label">Name of the new loan</label>
-                <input type="text" class="form-control" id="nameLoan" placeholder="Name" v-model="typeLoan">
-            </div>
-            <div class="mb-3">
-                <label for="amount" class="form-label">Password</label>
-                <input type="text" class="form-control" id="amount" placeholder="Max. Amount" v-model="maxAmount">
-            </div>
+        </header>
 
-            <div class="d-flex align-items-center justify-content-center flex-column ">
-                <h6>Payments</h5>
-                    <div class="d-flex gap-5 align-items-center justify-content-center">
-                        <div class="form-check">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                6
-                            </label>
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <main>
+            <form class="align-items-center justify-content-center d-flex-flex-column">
+                <div class="mb-3">
+                    <label for="nameLoan" class="form-label">Name of the new loan</label>
+                    <input type="text" class="form-control" id="nameLoan" placeholder="Name" v-model="typeLoan">
+                </div>
+                <div class="mb-3">
+                    <label for="amount" class="form-label">Amount</label>
+                    <input type="text" class="form-control" id="amount" placeholder="Max. Amount" v-model="maxAmount">
+                </div>
+
+                <div class="d-flex align-items-center justify-content-center flex-column ">
+                    <h6>Payments</h5>
+                        <div class="d-flex gap-5 align-items-center justify-content-center">
+                            <div class="form-check">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    6
+                                </label>
+                                <input class="form-check-input" type="checkbox" value="6" id="flexCheckDefault"
+                                    v-model="payments">
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    12
+                                </label>
+                                <input class="form-check-input" type="checkbox" value="12" id="flexCheckDefault"
+                                    v-model="payments">
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    24
+                                </label>
+                                <input class="form-check-input" type="checkbox" value="24" id="flexCheckDefault"
+                                    v-model="payments">
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    48
+                                </label>
+                                <input class="form-check-input" type="checkbox" value="48" id="flexCheckDefault"
+                                    v-model="payments">
+                            </div>
+
                         </div>
-                        <div class="form-check">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                12
-                            </label>
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                        <div class="form-check">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                24
-                            </label>
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                        <div class="form-check">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                48
-                            </label>
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
+                        <label for="amount" class="mt-3">Percentage<input type="number" placeholder="%"
+                                class="form-control" v-model="percentage" aria-label="Example text with button addon"
+                                aria-describedby="button-addon1"></label>
+                </div>
+                <button type="submit" class="btn btn-primary mt-2 justify-content-center align-items-center"
+                    @click.prevent="typeLoanCreate">Create new
+                    type</button>
+            </form>
+        </main>
 
-                    </div>
-                    <label for="amount" class="mt-3">Percentage<input type="number" placeholder="%"
-                            class="form-control" v-model="amount" aria-label="Example text with button addon"
-                            aria-describedby="button-addon1"></label>
-            </div>
-            <button type="submit" class="btn btn-primary mt-2 justify-content-center align-items-center">Create new
-                type</button>
-        </form>
-    </main>
+        <footer class="d-flex flex-column justify-content-center align-items-center p-2 text-center">
+            <p class="text-light">
+                © 2023 Mindhub Brother, Inc | All right reserve to Karen Buitrago
+            </p>
+            <nav class="d-flex gap-3 justify-content-center">
+                <a href="https://github.com/KarenBuitrago2825"><img src="../images/github-sign.png" alt="github"
+                        title="GitHub Karen Buitrago" class="network-img" /></a>
+                <a href="https://web.whatsapp.com/"><img src="../images/whatsapp(1).png" alt="whatsapp" title="WhatsApp"
+                        class="network-img" /></a>
+                <a href="https://www.instagram.com/"><img src="../images/instagram(1).png" alt="instagram"
+                        title="Instagram" class="network-img" /></a>
+                <a href="https://es-la.facebook.com/"><img src="../images/facebook(1).png" alt="facebok"
+                        title="Facebook" class="network-img" /></a>
+                <a href="mailto: mindhubrothers@gmail.com"><img src="../images/gmail.png" alt="mail" title="Mail"
+                        class="network-img" /></a>
+                <a href="tel: 654456987"><img src="../images/customer-service.png" alt="call-center" title="Call Us"
+                        class="network-img" /></a>
+            </nav>
+        </footer>
 
-    <footer class="d-flex flex-column justify-content-center align-items-center p-2 text-center">
-        <p class="text-light">
-            © 2023 Mindhub Brother, Inc | All right reserve to Karen Buitrago
-        </p>
-        <nav class="d-flex gap-3 justify-content-center">
-            <a href="https://github.com/KarenBuitrago2825"><img src="../images/github-sign.png" alt="github"
-                    title="GitHub Karen Buitrago" class="network-img" /></a>
-            <a href="https://web.whatsapp.com/"><img src="../images/whatsapp(1).png" alt="whatsapp" title="WhatsApp"
-                    class="network-img" /></a>
-            <a href="https://www.instagram.com/"><img src="../images/instagram(1).png" alt="instagram" title="Instagram"
-                    class="network-img" /></a>
-            <a href="https://es-la.facebook.com/"><img src="../images/facebook(1).png" alt="facebok" title="Facebook"
-                    class="network-img" /></a>
-            <a href="mailto: mindhubrothers@gmail.com"><img src="../images/gmail.png" alt="mail" title="Mail"
-                    class="network-img" /></a>
-            <a href="tel: 654456987"><img src="../images/customer-service.png" alt="call-center" title="Call Us"
-                    class="network-img" /></a>
-        </nav>
-    </footer>
-
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
