Actualizaciones front task11

--- a/src/main/resources/static/web/assets/pages/loans-application.html
+++ b/src/main/resources/static/web/assets/pages/loans-application.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
     <title>Loan Application | MindHub Brothers</title>
 </head>
 
@@ -55,7 +59,7 @@
             </div>
         </nav>
         <header>
-            <h1 class="text-light text-center">Welcome to Laon Application</h1>
+            <h1 class="text-light text-center p-2">Welcome to Laon Application</h1>
         </header>
 
         <main>
