--- a/src/main/resources/static/web/assets/pages/account.html
+++ b/src/main/resources/static/web/assets/pages/account.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div id="app">
+  <div id="app" v-cloak>
 
     <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
       <div class="container-fluid">
