--- a/src/main/resources/static/web/assets/pages/cards.html
+++ b/src/main/resources/static/web/assets/pages/cards.html
@@ -153,7 +153,7 @@
                                 <div class="strip"></div>
                                 <div class="mstrip"></div>
                                 <div class="sstrip">
-                                    <p class="code">{{debit.cvv}}</p>
+                                    <p class="code text-dark">{{debit.cvv}}</p>
                                     <p :class="{'codeDate': thruDateDebit[index] > dateName, 'codeDateExpired': thruDateDebit[index] < dateName}">{{thruDateDebit[index]}}</p>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                 <div class="strip"></div>
                                 <div class="mstrip"></div>
                                 <div class="sstrip">
-                                    <p class="code">{{credit.cvv}}</p>
+                                    <p class="code text-dark">{{credit.cvv}}</p>
                                     <p class="codeDate text-light" :class="{'codeDate': thruDateCredit[index] > dateName, 'codeDateExpired': thruDateCredit[index] < dateName}">{{thruDateCredit[index]}}</p>
                                 </div>
                             </div>
