--- a/src/main/resources/static/web/assets/pages/transfers.html
+++ b/src/main/resources/static/web/assets/pages/transfers.html
@@ -7,6 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="shortcut icon" href="../images/Mindhub Brothers-logos_transparent.png" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../style/accounts.css" />
   <title>Transfers | Mindhub Brothers</title>
 </head>
@@ -53,7 +59,7 @@
     </nav>
 
     <header>
-      <h1 class="text-light text-center">Welcome to your Transfers</h1>
+      <h1 class="text-light text-center p-2">Welcome to your Transfers</h1>
     </header>
 
     <main class="my-5 mx-md- text-light container rounded-4" id="form-loans">
