--- a/src/main/resources/static/web/assets/pages/account.html
+++ b/src/main/resources/static/web/assets/pages/account.html
@@ -81,10 +81,9 @@
             </div>
           </div>
         </div>
-        <button class="deactivateCard btn btn-danger rounded-4 mt-2" @click.prevent="deleteAccount(account.number)"> Delete
-          Account</button>
 
-       
+
+
         <div class=" table-responsive mt-2 d-flex flex-column justify-content-center align-items-center mx-2">
           <table class="table table-bordered table-striped border border-danger ">
             <caption>Transaction Resume</caption>
@@ -116,15 +115,40 @@
               </tr>
             </tbody>
           </table>
+
         </div>
       </div>
 
-      <div class="col-12 d-flex gap-5 justify-content-center flex-wrap mt-3">
+      <h3 class="mt-5 text-center"> Download the history of your transactions in PDF</h3>
+      <form class="accoun-fomr d-flex flex-column justify-content-md-between px-4 py-3 mx-auto" @submit.prevent>
+        <div class="text-start">
+          <label for="dateStart" class="form-label">Choose the from date: </label>
+          <input type="datetime-local" class="form-control" v-model="dateStartIn" id="dateStart" name="dateStart">
+        </div>
+        <div class=" mt-3 text-start">
+          <label for="dateStart" class="form-label">Choose the end date: </label>
+          <input type="datetime-local" class="form-control mb-3" v-model="dateEndIn" id="dateEnd" name="dateEnd">
+        </div>
+        <template v-if="errorMessage">
+          <div class="error d-flex">
+            <i class="bi bi-x-circle-fill me-1 fs-5">{{errorMessage}}</i>
+          </div>
+        </template>
+        <button class="btn btn-success" @click.prevent=" downloadpdf" type="submit"> <a href=""><ic class="bi bi-download"></i></a>Download
+          PDF</button>
+      </form>
+
+
+
+      <div class="col-12 d-flex gap-5 justify-content-center flex-wrap mt-5">
         <a href="#"><img src="../images/banner_1.1.png" alt="bn1" class="rounded-4"></a>
         <a href="#"><img src="../images/banner_2.2.png" alt="bn2" class="rounded-4"></a>
         <a href="#"><img src="../images/banner_1.3.png" alt="bn3" class="rounded-4"></a>
         <a href="#"><img src="../images/banner_1.4.png" alt="bn4" class="rounded-4"></a>
         <a href="#"><img src="../images/banner_1.5.png" alt="bn5" class="rounded-4"></a>
+        <button class="deactivateCard btn btn-danger rounded-4 mt-2" @click.prevent="deleteAccount(account.number)">
+          Delete
+          Account</button>
       </div>
     </main>
 
