Actualizaciones front y correcciones back task 11

--- a/src/main/resources/static/web/assets/pages/loans-application.html
+++ b/src/main/resources/static/web/assets/pages/loans-application.html
@@ -117,7 +117,7 @@
                             <span>Percentage Interests {{percentage}}%</span>
                         </template>
                     </div>
-                    <button type="submit" @click.prevent="sendLoan" @click.prevent="logOut"
+                    <button type="submit"  @click.prevent="sendLoan"
                         class="btn btn-success my-3 texte-center">Send loan</button>
                 </fieldset>
             </form>
