--- a/src/main/resources/static/web/assets/pages/transfers.html
+++ b/src/main/resources/static/web/assets/pages/transfers.html
@@ -8,11 +8,11 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="shortcut icon" href="../images/Mindhub Brothers-logos_transparent.png" type="image/x-icon" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../style/accounts.css" />
   <title>Transfers | Mindhub Brothers</title>
 </head>
@@ -44,7 +44,7 @@
               <a class="nav-link active fw-bold" href="#">TRANSACTION</a>
             </li>
             <li class="nav-item">
-              <button class="button">
+              <button class="button" @click.prevent="logOut">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75">
@@ -63,7 +63,7 @@
     </header>
 
     <main class="my-5 mx-md- text-light container rounded-4" id="form-loans">
-      <div class="container rounded-4 p-2" >
+      <div class="container rounded-4 p-2">
         <section class="d-flex align-items-center justify-content-evenly">
           <h2>Destination:</h2>
           <div class="form-check">
@@ -134,25 +134,16 @@
             </fieldset>
           </form>
 
-          
+
           <!--External form-->
           <form class="form-horizontal" v-if="form2">
             <fieldset>
               <!-- Form Name -->
               <legend>External accounts</legend>
 
-              <!-- Text input-->
-              <div class="form-group">
-                <label class=" control-label" for="textinput">From</label>
-                <div class="">
-                  <input id="textinput" name="textinput" type="text" placeholder="Number" class="form-control input-md"
-                    required="" v-model="destinationAccount" />
-                </div>
-              </div>
-
               <!-- Select Multiple -->
               <div class="form-group">
-                <label class=" control-label" for="selectmultiple">To:</label>
+                <label class=" control-label" for="selectmultiple">From:</label>
                 <div class="">
                   <select id="selectmultiple" name="selectmultiple" class="form-control" multiple="multiple"
                     v-model="originAccount" required="">
@@ -161,6 +152,15 @@
                     </template>
 
                   </select>
+                </div>
+              </div>
+
+              <!-- Text input-->
+              <div class="form-group">
+                <label class=" control-label" for="textinput">To:</label>
+                <div class="">
+                  <input id="textinput" name="textinput" type="text" placeholder="Number" class="form-control input-md"
+                    required="" v-model="destinationAccount" />
                 </div>
               </div>
 
@@ -192,7 +192,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="../scripts/transfers.js"></script>
